--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <!--底部标签颜色-->
     <color name="bottom">#6965f0</color>
+    <color name="white">#ffffff</color>
 </resources>
