--- a/app/src/main/res/layout/home_item_mid.xml
+++ b/app/src/main/res/layout/home_item_mid.xml
@@ -1,65 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="426px">
+                android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30px"
-        android:layout_marginTop="24px"
-        android:layout_marginBottom="26px"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20px"
+        android:layout_marginBottom="14px"
         android:orientation="horizontal"
-        android:gravity="center"
         android:id="@+id/mid_lltop">
-        <TextView
-            android:layout_width="30px"
-            android:layout_height="1dp"
-            android:background="#6965f0"
-            android:layout_marginRight="10px"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/jingxuan"
+            android:layout_marginRight="16px"
+            android:layout_gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="26px"
+            android:textColor="#2a2a2a"
             android:text="精选好货"
-            android:textColor="#6965f0"/>
-        <TextView
-            android:layout_width="30px"
-            android:layout_height="1dp"
-            android:background="#6965f0"
-            android:layout_marginLeft="10px"/>
+            />
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="238px"
+        android:layout_height="wrap_content"
         android:id="@+id/mid_recycle"
         android:layout_below="@+id/mid_lltop"
-        android:layout_marginBottom="26px"
-        android:layout_marginLeft="20px"
-        android:layout_marginRight="7px"></android.support.v7.widget.RecyclerView>
+        android:layout_marginBottom="70px"
+        ></android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30px"
-        android:layout_marginTop="24px"
-        android:layout_marginBottom="26px"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32px"
+        android:layout_marginLeft="20px"
         android:orientation="horizontal"
-        android:gravity="center"
         android:id="@+id/mid_llup"
         android:layout_below="@+id/mid_recycle">
-        <TextView
-            android:layout_width="30px"
-            android:layout_height="1dp"
-            android:background="#6965f0"
-            android:layout_marginRight="10px"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/zixun"
+            android:layout_gravity="center"
+            android:layout_marginRight="16px"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="26px"
-            android:text="头条资讯"
-            android:textColor="#6965f0"/>
-        <TextView
-            android:layout_width="30px"
-            android:layout_height="1dp"
-            android:background="#6965f0"
-            android:layout_marginLeft="10px"/>
+            android:textColor="#2a2a2a"
+            android:text="头条资讯"/>
+
+
     </LinearLayout>
 
 </RelativeLayout>
