--- a/app/src/main/res/layout/home_item_vp.xml
+++ b/app/src/main/res/layout/home_item_vp.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="296px">
+              android:layout_height="400px"
+              xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.youth.banner.Banner
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400px"
         android:id="@+id/item_vp_banner"
+        app:is_auto_play="true"
+        app:image_scale_type="fit_xy"
+        app:indicator_margin="14px"
+        app:indicator_drawable_selected="@drawable/myhome_banner_select"
+        app:indicator_drawable_unselected="@drawable/myhome_banner_unselect"
         ></com.youth.banner.Banner>
 
 </LinearLayout>
