--- a/app/src/main/res/layout/home_mid_item.xml
+++ b/app/src/main/res/layout/home_mid_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="173px"
-              android:layout_height="240px"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:orientation="vertical"
-              android:layout_marginRight="13px">
+              android:layout_marginRight="20px"
+              android:layout_marginLeft="30px">
 
 <ImageView
-    android:layout_width="160px"
-    android:layout_height="146px"
+    android:layout_width="150px"
+    android:layout_height="150px"
     android:id="@+id/home_mid_item_iv"
     android:src="@mipmap/ic_launcher"/>
     <TextView
@@ -15,18 +16,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="22px"
         android:layout_gravity="center"
-        android:text="干红葡萄酒"
-        android:textSize="22px"
+        android:text="Dior2017包包"
+        android:textSize="20px"
         android:textColor="#2a2a2a"
         android:id="@+id/home_mid_item_tvname"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/home_mid_item_tvmoney"
-        android:textSize="20px"
-        android:textColor="#de0b0b"
-        android:layout_marginTop="18px"
-        android:text="¥999"
+        android:textSize="22px"
+        android:textColor="#2a2a2a"
+        android:layout_marginTop="12px"
+        android:text="¥9851"
         android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/home_mid_item_tvoldmoney"
+        android:textSize="18px"
+        android:textColor="#cccccc"
+        android:text="¥9999"
+        android:layout_gravity="center"
+        android:layout_marginTop="8px"
+        />
 
 </LinearLayout>
