--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <!--底部标签颜色-->
     <color name="bottom">#6965f0</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#999999</color>
 </resources>
