--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,22 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="threebtn_tv_homefra">
+        <item name="android:textSize">26px</item>
+        <item name="android:layout_marginTop">20px</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">#2a2a2a</item>
+    </style>
+    <style name="threebtn_iv_homefra">
+        <item name="android:layout_width">80px</item>
+        <item name="android:layout_height">80px</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+    <style name="TranslucentTheme" parent="android:Theme.Holo.Light.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>  </style>
 </resources>
