程千浪0705第二次提交2.1

--- a/app/src/main/res/layout/home_item_threebut.xml
+++ b/app/src/main/res/layout/home_item_threebut.xml
@@ -36,7 +36,7 @@
             <ImageView
                 style="@style/threebtn_iv_homefra"
                 android:id="@+id/threebut_iv_nfc"
-                android:src="@drawable/nfc"
+                android:src="@drawable/home_nfc"
                 />
             <TextView
                 android:text="NFC查询"
