--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/xrecycle_homef"
-    android:layout_marginBottom="64px"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+    ></com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 </RelativeLayout>
