--- a/app/src/main/res/layout/home_item_threebut.xml
+++ b/app/src/main/res/layout/home_item_threebut.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-    android:layout_marginTop="54px"
-    android:layout_marginLeft="50px"
-    android:layout_marginRight="50px"
-    android:layout_marginBottom="70px">
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="54px"
+        android:layout_marginLeft="50px"
+        android:layout_marginRight="50px"
+        android:layout_marginBottom="70px"
         >
         <LinearLayout
             android:layout_width="0dp"
