--- a/app/src/main/res/layout/home_mid_item.xml
+++ b/app/src/main/res/layout/home_mid_item.xml
@@ -10,7 +10,7 @@
     android:layout_width="150px"
     android:layout_height="150px"
     android:id="@+id/home_mid_item_iv"
-    android:src="@mipmap/ic_launcher"/>
+    android:src="@drawable/a2222"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
