--- a/app/src/main/res/drawable/red_button.xml
+++ b/app/src/main/res/drawable/red_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <solid android:color="#fff"/>（控件的填充颜色）
-    <stroke android:width="3dp"
-            android:color="#000000"/>（边框的宽度以及颜色）
-    <corners android:radius="15px"/>（边框的角的弧度）
+    <stroke android:width="1dp"
+            android:color="#e93a38"/>（边框的宽度以及颜色）
+    <corners android:radius="10px"/>（边框的角的弧度）
 </shape>
