--- a/app/src/main/res/layout/register_main.xml
+++ b/app/src/main/res/layout/register_main.xml
@@ -88,7 +88,7 @@
             android:layout_width="138px"
             android:layout_height="40px"
             android:text="获取验证码"
-            android:textColor="#3d97fc"
+            android:textColor="#e93a38"
             android:background="@drawable/red_button"
             android:textSize="20px"
             android:layout_marginRight="20px"
