--- a/app/src/main/res/layout/home_mid_item.xml
+++ b/app/src/main/res/layout/home_mid_item.xml
@@ -3,8 +3,8 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
-              android:layout_marginRight="20px"
-              android:layout_marginLeft="30px">
+              android:paddingRight="20px"
+              android:paddingLeft="30px">
 
 <ImageView
     android:layout_width="150px"
