--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,10 @@
     </style>
     <style name="TranslucentTheme" parent="android:Theme.Holo.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>  </style>
+
+    <style name="TextAppearance.Design.Tab.Custom" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#2a2a2a</item>
+        <item name="textAllCaps">true</item>
+    </style>
 </resources>
