--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#2a2a2a</item>
         <item name="textAllCaps">true</item>
+    </style>
 
     <!-- 自定义仿IOS的AlertDialog的样式 -->
     <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
