--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -7,59 +7,59 @@
     android:layout_height="match_parent"
     tools:context="com.example.asus.onlyu.module.shoppingcar.AddressActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <RelativeLayout
+        android:id="@+id/relayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:layout_height="146px">
 
-        <com.zhy.autolayout.AutoRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back"/>
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/select_address"
-                android:textColor="#2a2a2a"
-                android:textSize="32px"/>
-        </com.zhy.autolayout.AutoRelativeLayout>
-    </android.support.v7.widget.Toolbar>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="32px"
+            android:text="@string/select_address"
+            android:textColor="#2a2a2a"
+            android:textSize="32px"
+            />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/relayout"
         android:background="#f7f7f7"
         android:gravity="right"
         >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/shop_address_recycler"
-        android:layout_width="679px"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20px"
-        android:layout_marginRight="20px"
-        ></android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/shop_address_recycler"
+            android:layout_width="679px"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20px"
+            android:layout_marginTop="20px"
+            ></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100px"
         android:layout_alignParentBottom="true">
-    <Button
-        android:layout_width="680px"
-        android:layout_height="70px"
-        android:layout_centerInParent="true"
-        android:background="@drawable/address_btn"
-        android:text="添加新地址"
-        android:textSize="28px"
-        android:textColor="#ffffff"
-        />
+
+        <Button
+            android:layout_width="680px"
+            android:layout_height="70px"
+            android:layout_centerInParent="true"
+            android:background="@drawable/address_btn"
+            android:text="添加新地址"
+            android:textColor="#ffffff"
+            android:textSize="28px"
+            />
     </RelativeLayout>
 </RelativeLayout>
