--- a/app/src/main/res/layout/activity_all_order.xml
+++ b/app/src/main/res/layout/activity_all_order.xml
@@ -9,30 +9,28 @@
     android:layout_height="match_parent"
     tools:context="com.example.asus.onlyu.module.shoppingcar.order.AllOrderActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <RelativeLayout
+        android:id="@+id/relayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:layout_height="146px">
 
-        <com.zhy.autolayout.AutoRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/back"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/all_order"
-                android:textColor="#2a2a2a"
-                android:textSize="32px"/>
-        </com.zhy.autolayout.AutoRelativeLayout>
-    </android.support.v7.widget.Toolbar>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="32px"
+            android:text="@string/all_order"
+            android:textColor="#2a2a2a"
+            android:textSize="32px"
+            />
+    </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/allorder_tab"
