--- a/app/src/main/res/layout/shoppingcar_fragment.xml
+++ b/app/src/main/res/layout/shoppingcar_fragment.xml
@@ -4,32 +4,28 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <RelativeLayout
+        android:id="@+id/relayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
-        <com.zhy.autolayout.AutoRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_height="146px">
+
         <TextView
-            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="32px"
-            android:layout_marginTop="32px"
             android:text="@string/shop_title"
             android:textColor="#2a2a2a"
-            android:textSize="32px"/>
-        </com.zhy.autolayout.AutoRelativeLayout>
-    </android.support.v7.widget.Toolbar>
+            android:textSize="32px"
+            />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/line"
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/relayout"
         android:background="#CCC"/>
 
     <RelativeLayout
